--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
 	width: 100%;
 	height: 100%;
-	color: #4ECDC4;
+	color: #999900;
 }
 
 h1 {
-	font-size: 36px;
+	font-size: 38px;
 	font-family: 'Abril Fatface', cursive;
 	letter-spacing: 1.5px;
     text-decoration: underline;
